tests/NormalTests/paczka1/fuzzy1/38341215.err
Error in line 1: A97 A708 42,7
Error in line 8: RnOc725z A708 34,0
Error in line 14: RnOc7-5z A643 -7,4
